force-app/main/default/objects/Scheme_Slab__c/fields/Cash_Discount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount__c</fullName>
    <label>Cash Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>