force-app/main/default/objects/Scheme_Slab__c/fields/For_Amount__c.field-meta.xml
<CustomField>
    <fullName>For_Amount__c</fullName>
    <label>For Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>