force-app/main/default/objects/Scheme_Slab__c/fields/Slab_Code__c.field-meta.xml
<CustomField>
    <fullName>Slab_Code__c</fullName>
    <label>Slab Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>