force-app/main/default/objects/Scheme_Slab__c/validationRules/For_Amount_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Amount_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>For_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>For Amount must be greater than zero.</errorMessage>
</ValidationRule>